k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vitali-ingress
#  annotations:
#    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
#          - path: /cats-api
#            path: /cats(/|$)(.*)
            path: /cats-api
            backend:
              service:
                name: cats-api # имя сервиса
                port:
                  number: 80 # наш сервис слушает на этом порту
